more or less finished proof-reading analysis chapter, still missing some plots

--- a/latex/software.tex
+++ b/latex/software.tex
@@ -1,4 +1,4 @@
-\section{About}
+\section{About}\label{Software:About}
 The current version of the software (14.02.14) works in the following way. 
 Various parameters are specified in a python-script which calls the program. 
 After initialization, where anisotropic diffusion constant, initial condition and areas of combined solution are set up we start solving the equation (using the implicit BE scheme). 
