--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -53,7 +53,11 @@ This will be used for the convergence tests to make sure that no effects of simu
 where $h$ is the parameter in question (usually $\Delta t$).
 
 \subsection{Verification techniques}
-There are quite a few ways to verify an implementation. This thesis will focus on three which are considered adequate for no particular reason.
+There are quite a few ways to verify an implementation. This thesis will focus on three which are considered adequate for no particular reason. 
+Unfortunately some of the tests require isolating one error-term, meaning that the test works better if the stability criterion for the FE scheme is broken. 
+The result of this is that some of the tests are only done on the BE scheme. 
+Fortunately, the BE scheme will be used for the actual simulations and will see more thorough verification.
+
 \begin{itemize}
  \item Method of manufactured solutions\\
  A normal way of checking that our scheme of choice is implemented correctly is by constructing an exact solution to the equation and checking that the error is of the expected order. 
@@ -210,6 +214,8 @@ The results of this test are shown in Figure \ref{convergence_test_FE_2d} and it
 \label{convergence_test_FE_2d}
 \end{figure}
 
+\subsubsection{Spatial convergence}
+
 Figure \ref{spatial_convergence_test} shows the converge for the spatial error. 
 This test is done only using the implicit scheme since it is an advantage for the spatial error, which is of second order, to be larger than the error from the time discretization. 
 Because of the stability criterion for the FE scheme it will break down for these tests, and not give the desired results. 
@@ -234,14 +240,20 @@ The normal error plot is also included in the figure to illustrate that the impr
 
 \subsection{Exact numerical solution}\label{exact_numerical_solution}
 
-The FE scheme has an exact solution seeing as it is in fact a difference equation. 
-This solution can be found if the scheme is reformulated as 
+Both schemes can be reformulated as difference equations, and will therefore have some form of exact solution. 
+Comparing a simulation to the expected exact numerical solution is a good way to verify that the implementation does what it is expected to do. 
+The numerical exacts are expected to be represented to more or less machine precision, though some deviances might occur.
 
-\begin{equation}
- u^{n+1} = D\Delta t u_{xx}^n + u^n
+As was done in section \ref{some_words_on_PDEs}, the schemes must first be reformulated as a theta-rule discretization
+\begin{equation}\label{theta_rule_difference_equation}
+  \frac{u^{n+1}-u^n}{\Delta t} =\theta D\Delta t u_{xx}^{n+1} +(1-\theta)D\Delta t u_{xx}^n
 \end{equation}
 
-where $u_{xx}^n$ denotes the double derivative of $u$ at time step $t^n$, and the first few iterations are inserted. 
+where $u_{xx}^n$ denotes the double derivative of $u$ at time step $t^n$.
+
+\subsubsection{The FE scheme}
+
+Inserting $\theta=0$ in equation \eqref{theta_rule_difference_equation} yields the FE scheme. The first few iterations are written out as
 
 \begin{align*}
  u^1 &= D\Delta t u_{xx}^0 + u^0 \\
@@ -273,10 +285,12 @@ In the same way as for the time derivative, the approximation to the spatial der
 \begin{align*}
  u^0_{xx} &= \frac{1}{\Delta x^2}\left(\cos(\pi(x+\Delta x)) -2\cos(\pi x) +\cos(\pi(x-\Delta x))\right) \\
  &= \frac{2}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)\cos(\pi x)\\
- u^0_{4x} &= [u^0_xx]_{xx} = \frac{1}{\Delta x^2}\left[\frac{2}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)\left(\cos(\pi(x+\Delta x)) -2\cos(\pi x) +\cos(\pi(x-\Delta x))\right)\right]\\
+ u^0_{4x} &= [u^0_{xx}]_{xx} \frac{1}{\Delta x^2}\left[\frac{u^0_{xx}}{\cos(\pi x)}\left(\cos(\pi(x+\Delta x)) -2\cos(\pi x) +\cos(\pi(x-\Delta x))\right)\right]\\
  &= \frac{4}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)^2\cos(\pi x)\\
  &\dots
 \end{align*}
+
+% u^0_{4x} &= [u^0_{xx}]_{xx} \frac{1}{\Delta x^2}\left[\frac{2}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)\left(\cos(\pi(x+\Delta x)) -2\cos(\pi x) +\cos(\pi(x-\Delta x))\right)\right]\\
 
 This pattern continues, and the exact numerical solution can be expressed by equation \eqref{numerical_solution} in 1D for the previously mentioned initial condition.
 \begin{equation}\label{numerical_solution}
@@ -286,13 +300,13 @@ This pattern continues, and the exact numerical solution can be expressed by equ
 The FE scheme is expected to represent this solution more or less to machine precision, at least to $15$ digits. 
 There are, however two issues with the solution \eqref{numerical_solution}:
 \begin{itemize}
- \item $\Delta x^{2i}$ will quickly tend to zero, and the computer will interpret it as zero. This will cause division by zero, which again ruins the simulation. This can be fixed rather simply by testing if $\Delta x^{2i}>0$ and returning zero if the test returns false.
- \item ${n\choose i}$ goes to infinity for large n and i. The computer will eventually (for $n>\sim170$) meet overflow. Figure \ref{convergence_exact_numerical_1d_n145} shows that at least for relatively few time steps the troublesome terms can be dropped, but effectively this limits the simulation to some 170 steps regardless of the value of $\Delta t$.
+ \item $\Delta x^{2i}$ will quickly tend to zero, and the computer will interpret it as zero. This will cause division by zero, which again results in ``Not a number'' (nan) and ruins the simulation. This can be fixed rather simply by testing if $\Delta x^{2i}>0$ and returning zero if the test returns false.
+ \item ${n\choose i}$ goes to infinity for large n and i. The computer can only represent numbers up to $\sim10^{308}$, which limits the number of steps to $170$ since $n!>10^{308}$ for $n>170$. Figure \ref{convergence_exact_numerical_1d_n145} shows that at least for relatively few time steps the troublesome terms can be dropped, but effectively this limits the simulation to some 170 steps regardless of the value of $\Delta t$.
 \end{itemize}
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.7]{Figures/convergence_exact_numerical_1d_n145}
+ \includegraphics[scale=0.5]{Figures/convergence_exact_numerical_1d_n145}
  \caption{Testing the relation between $\left(D\Delta t\right)^i$ and the binomial coefficients.}
  \label{convergence_exact_numerical_1d_n145}
 \end{figure}
@@ -324,10 +338,11 @@ We should, in other words, be pleased that the error starts out with machine pre
 \begin{figure}[H]
  \centering
  \includegraphics[scale=0.7]{Figures/exact_numerical_2d_n130.eps}
- \caption{Numerical solution from the FE scheme versus the exact numerical solution of the FE scheme in 2d. we have used a $\Delta t$ which is almost on the stability criterion, $\Delta t = \frac{\Delta x \Delta y}{5} = 8e-05$.}
+ \caption{Numerical solution from the FE scheme versus the exact numerical solution of the FE scheme in 2d. we have used a $\Delta t$ which is almost on the stability criterion, $\Delta t = \frac{\Delta x \Delta y}{5} = 8\cdot10^{-5}$.}
  \label{exact_numerical_2d_n130}
 \end{figure}
 
+\subsubsection{The BE scheme}
 For the BE scheme the exact numerical solution is more implicit than for the FE scheme. 
 As for the FE scheme, the numerical exact solution is simply the solution to the difference equation that the PDE is rewritten as. 
 However, the BE scheme is implicit and results in a system of linear equations. 
@@ -370,23 +385,25 @@ Although the accuracy is some $5$ orders of magnitude worse than the numerical e
 \end{figure}
 
 
-
+% \clearpage
 
 \section{Testing the Random walk implementation}\label{testing_random_walks}
 
 
+The RW implementation will be verified using the same techniques that were used to verify the PDE solvers with the exception of a numerical exact solution since there is none. 
+However, the initial condition used for the PDE solvers cannot be represented to a satisfying accuracy by a distribution of walkers. 
+A Heaviside step function on the other hand can be perfectly represented by said distribution and is defined in equation \eqref{Heaviside_def}. 
 
-To verify our implementation, and perhaps gain some new insight we will do some testing on the random walks implementation as well. 
-This means that we have to find a solution of the diffusion equation \eqref{simple_diffusion_equation} for an initial condition we can recreate with random walkers to the best possible precision. 
-The absolute simplest initial condition to recreate is the Heaviside step function, defined in equation \eqref{Heaviside_def}. 
+
 \begin{equation}\label{Heaviside_def}
  H(x-a) = \begin{cases}
            1\;\;x\geq a\\
            0\;\;x<a
           \end{cases}
 \end{equation}
-In order to verify our implementation we must solve the diffusion equation \eqref{simple_diffusion_equation} for this new initial condition. 
-This is most easily done through separation of variables. We have
+In order to verify the RW implementation an initial distribution of walkers which follows the Heaviside step function is given to the program, and a simulation is run for some number of time steps. 
+An exact solution must also be found to the diffusion equation (eq. \ref{simple_diffusion_equation}) for error calculations and this is done by separation of variables. We have
+
 \begin{align}
  \frac{\d u}{\d t} &= D\frac{\d^2 u}{\d x^2}\\
  \frac{\d u(0,t)}{\d x} &= \frac{\d u(1,t)}{\d x} = 0 \\
@@ -406,14 +423,18 @@ where the primes denotes the respective derivatives. We separate the equation us
 \end{align*}
 where $C$, $C_1$ and $C_2$ are arbitrary constants. 
 Choosing $\lambda = -\mu^2$ lets us rewrite the spatial solution in terms of sines and cosines. 
-There are really three choices here; $\lambda = -\mu^2$, $\lambda = \mu^2$ and $\lambda = ?$ but we chose the first because the results of the other choices are unphysical.
+There are really three choices here; $\lambda = -\mu^2$, $\lambda = \mu^2$ and $\lambda = 0$, but the first is chosen because the results of the other choices are unphysical or uninteresting. 
+Inserting $\lambda = -\mu^2$ into the expression found for $F(x)$ gives
+
 \begin{equation*}
  F(x) = a\cos(\mu x) + b\sin(\mu x)
 \end{equation*}
-The boundary conditions gives us 
+
+The boundary conditions result in
 \begin{align*}
  F'(0)T(t) = F'(1)T(t) = 0
 \end{align*}
+
 Since the time dependent solution cannot be exactly zero and is independent of position by construction ($C\exp(\lambda t)|_{x=0} = C\exp(\lambda t) \neq 0$), the first derivative of the spatial solution must be zero at the boundaries
 \begin{align*}
  F'(x) &= -a\mu\sin(\mu x) + b\mu\cos(\mu x) \\
@@ -434,7 +455,7 @@ The coefficients are found by approximating the initial condition
  &= \frac{2}{n\pi}\left[sin(n\pi x)\right]_{0.5}^1 \\
  &= \frac{2}{n\pi}\sin(n\pi) - \sin(\frac{n\pi}{2}) \\
  &= \frac{2\sin(\frac{n\pi}{2})}{n\pi}\\
- a_n &= \frac{2}{\pi m} (-1)^m\;\;\;\; m=2n+1
+ a_n &= \frac{2}{\pi m} (-1)^m\;\;;\;\; m=2n+1
 \end{align*}
 which gives us the final solution
 % \begin{equation}
