wrote somethinng about future work

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -98,6 +98,10 @@
 \clearpage
 \subfile{results}
 
+\chapter{Discussion}
+\clearpage
+\include{discussion}
+
 \appendix
 \chapter{}
 \include{appendix}
